# HappyAccidentsAPI

./: .gitignore  LICENSE  PYPI.md  README.md  checklist.md  pyproject.toml
docs/: get_token.md
examples/: basic_example.py
happyaccidentsapi/: __init__.py  _happyaccidentsapi.py  _token.py  enums.py  errors.py  models.py
tests/: test_client.py
