[tool.poetry]
name = "happyaccidentsapi"
version = "0.0.1"
description = "API Wrapper for HappyAccidents"
authors = ["hoopengo <hoopengo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
