[tool.poetry]
name = "happyaccidentsapi"
version = "0.0.2"
description = "API Wrapper for HappyAccidents"
authors = ["hoopengo <hoopengo@yandex.ru>"]
readme = ["PYPI.md"]
license = "Apache-2.0"
repository = "https://github.com/hoopengo/happyaccidentsapi"
keywords = ["api", "happyaccidents", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0"
aiohttp = { extras = ["speedups"], version = "^3.8.4" }
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
